language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_plus_operator_on_strings.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  \"hello, \" + name()\n}\n\nfn name() { \"Jak\" }\n"
---
----- BEFORE ACTION

pub fn main() {
  "hello, " + name()
   ▔▔▔▔▔▔▔▔▔▔▔↑     
}

fn name() { "Jak" }


----- AFTER ACTION

pub fn main() {
  "hello, " <> name()
}

fn name() { "Jak" }
