language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_plus_operator_on_strings_in_guards.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let name = \"jak\"\n  case todo {\n    _ if \"hello, \" + name -> todo\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let name = "jak"
  case todo {
    _ if "hello, " + name -> todo
          ▔▔▔▔▔▔▔▔▔▔▔↑           
  }
}


----- AFTER ACTION

pub fn main() {
  let name = "jak"
  case todo {
    _ if "hello, " <> name -> todo
  }
}
