language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_truncated_segment_1.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  <<1, 257, 259:size(1)>>\n}"
---
----- BEFORE ACTION

pub fn main() {
  <<1, 257, 259:size(1)>>
       ↑                 
}


----- AFTER ACTION

pub fn main() {
  <<1, 1, 259:size(1)>>
}
