language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_truncated_segment_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  <<1, 1024:size(10)>>\n}"
---
----- BEFORE ACTION

pub fn main() {
  <<1, 1024:size(10)>>
            ↑         
}


----- AFTER ACTION

pub fn main() {
  <<1, 0:size(10)>>
}
