language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_dynamic_decoder_already_imported_module.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport gleam/dynamic/decode as dyn_dec\n\npub type Wibble {\n  Wibble(a: Int, b: Float, c: String)\n}\n"
---
----- BEFORE ACTION

import gleam/dynamic/decode as dyn_dec

pub type Wibble {
    ↑            
  Wibble(a: Int, b: Float, c: String)
}


----- AFTER ACTION

import gleam/dynamic/decode as dyn_dec

pub type Wibble {
  Wibble(a: Int, b: Float, c: String)
}

fn wibble_decoder() -> dyn_dec.Decoder(Wibble) {
  use a <- dyn_dec.field("a", dyn_dec.int)
  use b <- dyn_dec.field("b", dyn_dec.float)
  use c <- dyn_dec.field("c", dyn_dec.string)
  dyn_dec.success(Wibble(a:, b:, c:))
}
