language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_dynamic_decoder_does_not_produce_zero_values_for_non_prelude_and_stdlib_types_2.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble.{type Wibble}\n\npub type Wobble {\n  Wobble(value: option.Option(Wibble))\n  Wimble(a: Int, b: Int)\n}\n    "
---
----- BEFORE ACTION

import wibble.{type Wibble}
                          ↑

pub type Wobble {
  Wobble(value: option.Option(Wibble))
  Wimble(a: Int, b: Int)
}
    


----- AFTER ACTION

import gleam/dynamic/decode
import wibble.{type Wibble}

pub type Wobble {
  Wobble(value: option.Option(Wibble))
  Wimble(a: Int, b: Int)
}

fn wobble_decoder() -> decode.Decoder(Wobble) {
  use variant <- decode.field("type", decode.string)
  case variant {
    "wobble" -> {
      use value <- decode.field("value", todo as "Decoder for a")
      decode.success(Wobble(value:))
    }
    "wimble" -> {
      use a <- decode.field("a", decode.int)
      use b <- decode.field("b", decode.int)
      decode.success(Wimble(a:, b:))
    }
    _ -> decode.failure(todo as "Zero value for Wobble", "Wobble")
  }
}
